--- a/landing/index.html
+++ b/landing/index.html
@@ -44,10 +44,10 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="#">Link to test 1 here</a></td>
-             <td><a href="">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/do/26624533206c/5ba">B2: Usable Form Test</a></td>
+             <td><a href="https://usabilityhub.com/tests/26624533206c/results/682978d22579">B2: Usable Form Results</a></td>
           </tr>
-          <tr>
+<!--          <tr>
              <td><a href="#">Link to test 2 here</a></td>
              <td><a href="">Link to test results 2</a></td>
           </tr>
@@ -63,12 +63,12 @@
              <td><a href="#">Link to test 5 here</a></td>
              <td><a href="#">Link to test results 5</a></td>
           </tr>
-          <!-- start link -->
+
           <tr>
              <td><a href="#">Link to test 6 here</a></td>
              <td><a href="#">Link to test results 6</a></td>
           </tr>
-          <!-- end link -->
+-->
           <!-- to add a new link copy from start link to end link and paste here-->
        </tbody>
     </table>
