--- a/landing/index.html
+++ b/landing/index.html
@@ -47,28 +47,28 @@
              <td><a href="https://usabilityhub.com/do/26624533206c/5ba">B2: Usable Form Test</a></td>
              <td><a href="https://usabilityhub.com/tests/26624533206c/results/682978d22579">B2: Usable Form Results</a></td>
           </tr>
-<!--          <tr>
-             <td><a href="#">Link to test 2 here</a></td>
-             <td><a href="">Link to test results 2</a></td>
-          </tr>
-          <tr class="odd">
-             <td><a href="#">Link to test 3 here</a></td>
-             <td><a href="">Link to test results 3</a></td>
-          </tr>
           <tr>
-             <td><a href="#">Link to test 4 here</a></td>
-             <td><a href="#">Link to test results 4</a></td>
+             <td><a href="https://usabilityhub.com/do/bb43ff621630/26ce">B3: Details Test</a></td>
+             <td><a href="https://usabilityhub.com/tests/bb43ff621630/results/aa3a2d6ad1ed%5C">B3: Details Results</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 5 here</a></td>
-             <td><a href="#">Link to test results 5</a></td>
+                       <td><a href="https://usabilityhub.com/do/4de402975f3b/b58f">B4: Homepage and Categories Test</a></td>
+                       <td><a href="https://usabilityhub.com/tests/4de402975f3b/results/ce84a0869436">B4: Homepage and Categories Results</a></td>
           </tr>
+<!--                  <tr>
+                       <td><a href="#">Link to test 4 here</a></td>
+                       <td><a href="#">Link to test results 4</a></td>
+                    </tr>
+                    <tr class="odd">
+                       <td><a href="#">Link to test 5 here</a></td>
+                       <td><a href="#">Link to test results 5</a></td>
+                    </tr>
 
-          <tr>
-             <td><a href="#">Link to test 6 here</a></td>
-             <td><a href="#">Link to test results 6</a></td>
-          </tr>
--->
+                    <tr>
+                       <td><a href="#">Link to test 6 here</a></td>
+                       <td><a href="#">Link to test results 6</a></td>
+                    </tr>
+          -->
           <!-- to add a new link copy from start link to end link and paste here-->
        </tbody>
     </table>
