--- a/landing/index.html
+++ b/landing/index.html
@@ -49,7 +49,7 @@
           </tr>
           <tr>
              <td><a href="https://usabilityhub.com/do/bb43ff621630/26ce">B3: Details Test</a></td>
-             <td><a href="https://usabilityhub.com/tests/bb43ff621630/results/aa3a2d6ad1ed%5C">B3: Details Results</a></td>
+             <td><a href="https://usabilityhub.com/tests/bb43ff621630/results/aa3a2d6ad1ed">B3: Details Results</a></td>
           </tr>
           <tr class="odd">
                        <td><a href="https://usabilityhub.com/do/4de402975f3b/b58f">B4: Homepage and Categories Test</a></td>
