--- a/landing/index.html
+++ b/landing/index.html
@@ -59,12 +59,12 @@
                <td><a href="https://usabilityhub.com/do/f73084238abf/480a">B5: Details for Web Test</a></td>
                <td><a href="https://usabilityhub.com/tests/f73084238abf/results/62b4b129cfcf">B5: Details for Web Results</a></td>
             </tr>
-          <!--                    <tr class="odd">
-                                 <td><a href="#">Link to test 5 here</a></td>
-                                 <td><a href="#">Link to test results 5</a></td>
-                              </tr>
+          <tr class="odd">
+             <td><a href="https://usabilityhub.com/do/e55cd9dfb6a9/b2ce">B6: Homepage and Categories Website Test</a></td>
+             <td><a href="https://usabilityhub.com/tests/e55cd9dfb6a9/results/b24c16a56aa1">B6: Homepage and Categories Website Results</a></td>
+          </tr>
 
-                              <tr>
+  <!--                            <tr>
                                  <td><a href="#">Link to test 6 here</a></td>
                                  <td><a href="#">Link to test results 6</a></td>
                               </tr>
